
The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog]
and this project adheres to http://semver.org/spec/v2.0.0.html[Semantic Versioning].

[discrete]
==== Versions
toc::[]


== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.6.2...main[Unreleased]

=== Added

=== Changed

=== Removed

=== Fixed

=== Bumped

=== Migration


== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.6.1...v1.6.2[1.6.2]

=== Bumped

Re-release of 1.6.1 due to build issues.


== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.6.0...v1.6.1[1.6.1]

=== Bumped

Re-release of 1.6.0 due to build issues.


== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.5.0...v1.6.0[1.6.0]

=== Added

* Consent and ResearchSubject (R4 & STU3)

=== Bumped

* _**BREAKING**_ Kotlin 1.3.61 -> 1.4.32
* Gradle 6.7.1 -> 6.9.1
* AndroidStudio 4.1 -> 4.2.2
* Junit 4.13.0 -> 4.13.2

== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.4.0...v1.5.0[1.5.0]

=== Added

* Add FHIR R4 model AllergyIntolerance, Device, DeviceUseStatement and Immunization.

== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.3.1...v1.4.0[1.4.0]

=== Fixed

* MedicationStatement used the wrong CodingSystem for status.

=== Bumped

* _*BREAKING*_ Moshi 1.8.0 -> 1.12.0

== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.2.1...v1.3.1[1.3.1]

Re release of 1.3.0 due to build issues

== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.2.1...v1.3.0[1.3.0]

=== Added

* Add FHIR R4 model MedicationStatement and PractitionerRole

=== Changed

* FhirElementFactory#getClassForFhirType is now case insensitive.

== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.2.0...v1.2.1[1.2.1]

=== Changed

* Canonical(R4): had been aligned with the other classes of the repo

=== Fixed

* CanonicalJsonAdapter#toJson(R4): it accesses `value` of a writer now only once

